# temporal_serial_dictator

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
src/: _typing.py
src/data_parsing/: tsoi_parser.py
src/data_transformation/: convert_lackner_datasets.py  eda.py  tsoi_to_json.py
src/encoding/: decoding.py  encoding.py
src/real_data_tools/: run_natural_experiment.py  tsoi_parser.py
src/synthetic_data/: instances.py  points.py  run_synthetic_experiment.py
src/synthetic_data_tools/: aaai_experiment.py  points.py  profiles.py  run_synthetic_experiment.py
src/utils/: printing.py
src/verification/: collate_violations.py  multiprocessing_verify_pjr.py  verify_pjr.py
src/voting_rules/: serial_dictator.py
tests/: test_encoding_decoding_roundtrip.py  test_full_pipeline_encoding_decoding.py  test_multiprocessing_verify_pjr.py  test_run_natural_experiment.py  test_synthetic_data_creation_and_ingestion.py  test_tsoi_directory_parser.py  test_tsoi_file_parser.py  test_verify_pjr.py
