[project]
name = "temporal-serial-dictator"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
dependencies = ["numpy>=1.22", "scipy>=1.10"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = ["^lackner_perpetual_voting/"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
